--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: ruby
+bundler_args: --without development doc --quiet
 rvm:
   - 1.9.3
   - 2.0.0
-before_install: 
- - "firefox --version"
- - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
- - "export DISPLAY=:99.0"
- - ./test/ci/before_install.sh
-before_script: ./test/ci/before_script.sh
+before_install: test/ci/before_install
+before_script:  test/ci/before_script
 script: bundle exec rake test
