--- a/test/fixtures/product_linkages.yml
+++ b/test/fixtures/product_linkages.yml
@@ -18,47 +18,54 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: product_links
+# == Table: product_linkages
 #
-#  carried_id   :integer          not null
+#  carried_id   :integer
 #  carrier_id   :integer          not null
 #  created_at   :datetime         not null
 #  creator_id   :integer
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
+#  nature       :string(255)      not null
 #  operation_id :integer
+#  point        :string(255)      not null
 #  started_at   :datetime
 #  stopped_at   :datetime
 #  updated_at   :datetime         not null
 #  updater_id   :integer
 #
 #
-# == Fixture: product_links
+# == Fixture: product_linkages
 #
-# product_links_001:
-#   carried_id: 1
+# product_linkages_001:
 #   carrier_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   nature: "Lorem ipsum"
+#   point: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-product_links_001:
+product_linkages_001:
   carried_id: 16001
   carrier_id: 16002
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  nature: "occupied"
+  point: "rear"
   id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-product_links_002:
+product_linkages_002:
   carried_id: 16001
   carrier_id: 16002
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  nature: "occupied"
+  point: "front"
   id: 2
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
