--- a/test/fixtures/product_memberships.yml
+++ b/test/fixtures/product_memberships.yml
@@ -26,6 +26,7 @@
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  member_id    :integer          not null
+#  nature       :string(255)      not null
 #  operation_id :integer
 #  started_at   :datetime         not null
 #  stopped_at   :datetime
@@ -41,6 +42,7 @@
 #   group_id: 1
 #   id: 1
 #   member_id: 1
+#   nature: "Lorem ipsum"
 #   started_at: 2009-07-19 19:13:59 +02:00
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
@@ -52,6 +54,7 @@ product_memberships_001:
   group_id: 30001
   id: 1
   member_id: 40001
+  nature: "interior"
   started_at: 2001-07-19 19:13:59 +02:00
   updated_at: 2001-07-19 19:13:59 +02:00
   updater_id: 1
@@ -62,6 +65,7 @@ product_memberships_002:
   group_id: 30001
   id: 2
   member_id: 40002
+  nature: "exterior"
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 19:14:00 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
