--- a/test/fixtures/catalog_prices.yml
+++ b/test/fixtures/catalog_prices.yml
@@ -29,6 +29,7 @@
 #  id                 :integer          not null, primary key
 #  indicator          :string(120)      not null
 #  lock_version       :integer          default(0), not null
+#  name               :string(255)      not null
 #  reference_tax_id   :integer
 #  started_at         :datetime
 #  stopped_at         :datetime
@@ -49,6 +50,7 @@
 #   currency: "Lorem ipsum"
 #   id: 1
 #   indicator: "Lorem ipsum"
+#   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #   variant_id: 1
