--- a/test/fixtures/catalog_prices.yml
+++ b/test/fixtures/catalog_prices.yml
@@ -60,15 +60,15 @@
 catalog_prices_001:
   all_taxes_included: true
   amount: 1196
-  started_at: 2009-07-19 19:13:59 +02:00
   catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
   id: 1
   indicator: 'population'
-  variant_id: 1
+  name: "Catalog #1"
   reference_tax_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
@@ -76,15 +76,15 @@ catalog_prices_001:
 catalog_prices_002:
   all_taxes_included: true
   amount: 1196
-  started_at: 2009-07-19 19:13:59 +02:00
   catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
   id: 2
   indicator: 'population'
-  variant_id: 1
+  name: "Catalog #1"
   reference_tax_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
@@ -92,15 +92,15 @@ catalog_prices_002:
 catalog_prices_003:
   all_taxes_included: false
   amount: 950
-  started_at: 2009-07-19 19:13:59 +02:00
   catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
   id: 3
   indicator: 'population'
-  variant_id: 1
+  name: "Catalog #1"
   reference_tax_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
@@ -108,15 +108,15 @@ catalog_prices_003:
 catalog_prices_004:
   all_taxes_included: true
   amount: 1196
-  started_at: 2009-07-19 19:13:59 +02:00
   catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
   id: 4
   indicator: 'population'
-  variant_id: 1
+  name: "Catalog #1"
   reference_tax_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
@@ -124,15 +124,15 @@ catalog_prices_004:
 catalog_prices_005:
   all_taxes_included: true
   amount: 1196
-  started_at: 2009-07-19 19:13:59 +02:00
   catalog_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: "EUR"
   id: 5
   indicator: 'population'
-  variant_id: 1
+  name: "Catalog #1"
   reference_tax_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
