--- a/test/fixtures/entity_links.yml
+++ b/test/fixtures/entity_links.yml
@@ -20,18 +20,20 @@
 #
 # == Table: entity_links
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  description  :text
-#  entity_1_id  :integer          not null
-#  entity_2_id  :integer          not null
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  nature       :string(255)      not null
-#  started_at   :datetime
-#  stopped_at   :datetime
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at    :datetime         not null
+#  creator_id    :integer
+#  description   :text
+#  entity_1_id   :integer          not null
+#  entity_1_role :string(255)      not null
+#  entity_2_id   :integer          not null
+#  entity_2_role :string(255)      not null
+#  id            :integer          not null, primary key
+#  lock_version  :integer          default(0), not null
+#  nature        :string(255)      not null
+#  started_at    :datetime
+#  stopped_at    :datetime
+#  updated_at    :datetime         not null
+#  updater_id    :integer
 #
 #
 # == Fixture: entity_links
@@ -40,38 +42,46 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   entity_1_id: 1
+#   entity_1_role: "Lorem ipsum"
 #   entity_2_id: 1
+#   entity_2_role: "Lorem ipsum"
 #   id: 1
 #   nature: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 entity_links_001:
-  entity_1_id: 1
-  nature: "contact"
-  entity_2_id: 2
-  id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  entity_1_id: 1
+  entity_1_role: "employer"
+  entity_2_id: 2
+  entity_2_role: "employee"
+  id: 1
+  nature: "work"
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
 
 entity_links_002:
-  entity_1_id: 2
-  nature: "contact"
-  entity_2_id: 1
-  id: 2
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  entity_1_id: 2
+  entity_1_role: "employer"
+  entity_2_id: 1
+  entity_2_role: "employee"
+  id: 2
+  nature: "work"
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
 
 entity_links_003:
-  entity_1_id: 2
-  nature: "undefined"
-  entity_2_id: 3
-  id: 3
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  entity_1_id: 2
+  entity_1_role: "entity"
+  entity_2_id: 3
+  entity_2_role: "entity"
+  id: 3
+  nature: "undefined"
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
