--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ env:
   - DB=postgresql
   - DB=sqlite3
 before_install:
-  - "gem update --system 1.8.25"
+  - "ci/setup" 
+  - "gem update --system 1.3.5"
   - "gem install rake -v=0.9.6 --no-ri --no-rdoc"
   - "gem install pg mysql sqlite3 --no-ri --no-rdoc"
   - "gem install rails -v=2.3.2 --no-ri --no-rdoc"
