--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ config/locales/*/prints/*.pdf
 
 # Ignore local database config
 /config/database.yml
+/config/api.yml
 
 # Ignore installer useless files
 installer/debian/debian/ekylibre.debhelper.log
