--- a/test/fixtures/production_supports.yml
+++ b/test/fixtures/production_supports.yml
@@ -25,6 +25,7 @@
 #  creator_id    :integer
 #  exclusive     :boolean          not null
 #  id            :integer          not null, primary key
+#  irrigated     :boolean          not null
 #  lock_version  :integer          default(0), not null
 #  production_id :integer          not null
 #  started_at    :datetime
@@ -41,6 +42,7 @@
 #   creator_id: 1
 #   exclusive: true
 #   id: 1
+#   irrigated: true
 #   production_id: 1
 #   storage_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
